# hsm-app

./: .dockerignore  .firebaserc  .gitignore  AGENTS.md  README.md  application-spec.md  cloudbuild.backend.prod.yaml  cloudbuild.backend.staging.yaml  docker-compose.yml  firebase.json  firestore.rules  package-lock.json  package.json
backend/: .dockerignore  .gitignore  Dockerfile  docker-entrypoint-api.sh  pyproject.toml
backend/backend_api/: __init__.py  auth_deps.py  catalog.py  catalog_service.py  catalog_write.py  cog_validation.py  env_background_sample.py  env_cog_bands.py  env_cog_explainability_preflight.py  env_cog_replace_pipeline.py  explainability_background_pipeline.py  explainability_runtime_cache.py  firebase_admin_app.py  firebase_identity_toolkit.py  firestore_seed.py  job_async_policy.py  job_errors.py  job_http.py  job_queue.py  job_runner.py  job_worker_auth.py  jobs.py  main.py  model_effective_config.py  model_suitability_pipeline.py  point_explainability.py  point_sampling.py  project_create_pipeline.py  project_manifest.py  request_timeout_middleware.py  schemas.py  schemas_admin.py  schemas_job.py  schemas_project.py  schemas_upload.py  settings.py  storage.py  upload_session_error_context.py  upload_session_ingest.py  upload_session_runtime.py  (+2 more)
backend/backend_api/job_handlers/: __init__.py  context.py  environmental_cog_replace.py  explainability_background.py  model_create_upload.py  model_replace_cog.py  project_create_env.py  project_utils.py  registry.py
backend/backend_api/routers/: auth.py  catalog_upload_utils.py  internal_jobs.py  jobs_admin.py  models.py  models_openapi.py  project_visibility_parse.py  projects.py  (+2 more)
backend/scripts/: firestore_seed_catalog.py  seed_firestore_emulator.py  set_admin_claim.py
backend/tests/: conftest.py  helpers.py  test_admin.py  test_api.py  test_async_app.py  test_auth.py  test_catalog.py  test_env_background_sample.py  test_explainability_warmup_and_timeout.py  test_job_async_policy.py  test_job_errors.py  test_job_queue.py  test_job_worker_auth.py  test_jobs.py  test_model_schema_migration.py  test_openapi.py  test_point.py  test_point_explainability_dataframe.py  test_point_explainability_pickle.py  test_project_band_definitions.py  test_request_timeout_middleware.py  test_schemas_admin.py  test_shap_background_cap.py  test_upload_session_ingest.py  test_upload_sessions.py  test_visibility.py
(+167 files in other folders)
