[project]
name = "hsm-app"
version = "0.1.0"
description = "Habitat Suitability Model Visualiser Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.11.5",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
]

[project.optional-dependencies]
# Heavy stack (Google API clients, etc.); install when wiring Firebase Auth / admin APIs.
auth = [
    "firebase-admin>=6.9.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend_api"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
