[project]
name = "hsm-app"
version = "0.1.0"
description = "Habitat Suitability Model Visualiser Backend"
requires-python = ">=3.11"
dependencies = [
    "firebase-admin>=6.9.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-firestore>=2.19.0",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.11.5",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
    "rasterio>=1.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend_api"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function" 

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
]
