[project]
name = "hsm-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "hsm-api",
    "hsm-worker",
]

[tool.uv.sources]
hsm-api = { workspace = true }
hsm-worker = { workspace = true }

[tool.uv.workspace]
members = ["packages/hsm_core", "packages/hsm_api", "packages/hsm_worker"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
]
